# curso-langchain

./: .gitignore  README.md  pyproject.toml  requirements.txt
chroma_docs/: chroma-collections.parquet  chroma-embeddings.parquet
chroma_docs/index/: id_to_uuid_9416f1c5-e549-4393-859d-98a7cc636e8c.pkl  index_metadata_9416f1c5-e549-4393-859d-98a7cc636e8c.pkl  uuid_to_id_9416f1c5-e549-4393-859d-98a7cc636e8c.pkl
data/: docs_en_2023_06_23.jsonl  docs_en_2023_06_23.tar  docs_en_2023_06_28.jsonl
hashira/: README.md  ai_conversation.py  config.yaml  prompt_ai_conversation.txt  text_extractor.py  text_retriever_summarizing.py  utils.py  vectorstore_memory_buffer.py
huggingface_docs_chroma/: chroma-embeddings.parquet
huggingface_docs_chroma/index/: id_to_uuid_9416f1c5-e549-4393-859d-98a7cc636e8c.pkl  index_metadata_9416f1c5-e549-4393-859d-98a7cc636e8c.pkl  uuid_to_id_9416f1c5-e549-4393-859d-98a7cc636e8c.pkl
